[package]
name = "geotiff-rs"
version = "0.1.1"
edition = "2021"
description = "A library for reading GeoTIFF files"
license = "MIT"
repository = "https://github.com/fizyk20/geotiff-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
weezl = "0.1"
